service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx-pod
  type: NodePort
  ports:
  - protocol: TCP
    port: 8088
    targetPort: nginx-pod-port
