pod-nginx-with-ingress_gateway.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    app: nginx-pod
spec:
  containers:
  - name: nginx-pod
    image: nginx:1.25.4-alpine3.18
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service1
spec:
  type: ClusterIP
  selector:
      app: nginx-pod
  ports:
    - port: 9080
      targetPort: 80
      protocol: TCP
---

apiVersion: v1
kind: Pod
metadata:
  name: apache-pod
  labels:
    app: apache-pod
spec:
  containers:
    - name: apache-pod
      image: httpd:2.4.59-alpine3.19
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
      ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: apache-service1
spec:
  type: ClusterIP
  selector:
    app: apache-pod
  ports:
    - port: 9081
      targetPort: 80
      protocol: TCP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress1
  # https://github.com/kubernetes/ingress-nginx/blob/main/docs/user-guide/nginx-configuration/annotations.md
  # configure the ingress nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target:  /
spec:
  # Determine the Ingress Class Name
  # kubectl get ingressclass
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /foo
        pathType: Exact
        backend:
          service:
            port:
              number: 9080
            name: nginx-service1
      - path: /bar
        pathType: Prefix
        backend:
          service:
            port:
              number: 9081
            name: apache-service1
